# prolog_parser

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ast.rs  lexer.rs  lib.rs  macros.rs  parser.rs  put_back_n.rs  string_list.rs  tabled_rc.rs
tests/: bom.rs  parse_comments.rs  parse_tokens.rs
