[package]
name = "prolog_parser"
version = "0.8.33"
authors = ["Mark Thom <markjordanthom@gmail.com>"]
repository = "https://github.com/mthom/prolog_parser"
description = " An operator precedence parser for rusty-wam, an up and coming ISO Prolog implementation."
license = "BSD-3-Clause"

[dependencies]
lexical = "2.1.0"
ordered-float = "0.5.0"
rug = "1.4.0"

[lib]
path = "src/lib.rs"
